[maven-release-plugin] prepare release release-1.5.0.FINAL
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@15998 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-jboss5/pom.xml
+++ b/sip-servlets-jboss5/pom.xml
@@ -3,12 +3,12 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>1.5.0-SNAPSHOT</version>
+		<version>1.5.0.FINAL</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-jboss5</artifactId>
-	<version>1.5.0-SNAPSHOT</version>
+	<version>1.5.0.FINAL</version>
 	<packaging>jar</packaging>
 	<name>Sip Servlets Loading Specifics for JBoss 5</name>
 	<url>http://www.mobicents.org/products_sip_servlets.html</url>
@@ -33,42 +33,42 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-impl</artifactId>
-			<version>1.5.0-SNAPSHOT</version>
+			<version>1.5.0.FINAL</version>
 			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.5.0-SNAPSHOT</version>
+			<version>1.5.0.FINAL</version>
 			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-annotations</artifactId>
-			<version>1.5.0-SNAPSHOT</version>
+			<version>1.5.0.FINAL</version>
 			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-jboss5-metadata</artifactId>
-			<version>1.5.0-SNAPSHOT</version>
+			<version>1.5.0.FINAL</version>
 			<scope>provided</scope>
 		</dependency>						
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-jboss5-ha-server-cache</artifactId>
-			<version>1.5.0-SNAPSHOT</version>
+			<version>1.5.0.FINAL</version>
 			<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-jruby</artifactId>
-			<version>1.5.0-SNAPSHOT</version>	
+			<version>1.5.0.FINAL</version>	
 			<scope>provided</scope>		
 		</dependency>
 		
@@ -160,7 +160,38 @@
 			<version>${mobicents.cluster.version}</version>
 			<scope>provided</scope>
 		</dependency>
-						
+					
+				<dependency>
+					<groupId>org.mobicents.ha.javax.sip</groupId>
+					<artifactId>mobicents-jain-sip-ha-core</artifactId>
+					<version>${mobicents.jain.sip.ha.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.ha.javax.sip</groupId>
+					<artifactId>mobicents-jain-sip-jboss5</artifactId>
+					<version>${mobicents.jain.sip.ha.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.cluster</groupId>
+					<artifactId>timers</artifactId>										
+					<version>${mobicents.cluster.version}</version>
+				</dependency>				
+				<dependency>
+					<groupId>org.mobicents.cluster</groupId>
+					<artifactId>core</artifactId>										
+					<version>${mobicents.cluster.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.cluster</groupId>
+					<artifactId>cache</artifactId>										
+					<version>${mobicents.cluster.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.mobicents.tools</groupId>
+					<artifactId>sip-balancer-jar</artifactId>
+					<version>${mobicents.balancer.version}</version>
+					<scope>provided</scope>
+				</dependency>
 	</dependencies>
 	
 	<repositories>
@@ -208,39 +239,6 @@
 	<profiles>		
 		<profile>		
 			<id>jboss-5</id>
-			<dependencies>
-				<dependency>
-					<groupId>org.mobicents.ha.javax.sip</groupId>
-					<artifactId>mobicents-jain-sip-ha-core</artifactId>
-					<version>${mobicents.jain.sip.ha.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.mobicents.ha.javax.sip</groupId>
-					<artifactId>mobicents-jain-sip-jboss5</artifactId>
-					<version>${mobicents.jain.sip.ha.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.mobicents.cluster</groupId>
-					<artifactId>timers</artifactId>										
-					<version>${mobicents.cluster.version}</version>
-				</dependency>				
-				<dependency>
-					<groupId>org.mobicents.cluster</groupId>
-					<artifactId>core</artifactId>										
-					<version>${mobicents.cluster.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.mobicents.cluster</groupId>
-					<artifactId>cache</artifactId>										
-					<version>${mobicents.cluster.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.mobicents.tools</groupId>
-					<artifactId>sip-balancer-jar</artifactId>
-					<version>${mobicents.balancer.version}</version>
-					<scope>provided</scope>
-				</dependency>
-			</dependencies>				
 			<build>								
 				<plugins>
 					<plugin>
@@ -282,40 +280,7 @@
 			</build>
 		</profile>	
 		<profile>		
-			<id>jboss-5-distro</id>
-			<dependencies>
-				<dependency>
-					<groupId>org.mobicents.ha.javax.sip</groupId>
-					<artifactId>mobicents-jain-sip-ha-core</artifactId>
-					<version>${mobicents.jain.sip.ha.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.mobicents.ha.javax.sip</groupId>
-					<artifactId>mobicents-jain-sip-jboss5</artifactId>
-					<version>${mobicents.jain.sip.ha.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.mobicents.cluster</groupId>
-					<artifactId>timers</artifactId>										
-					<version>${mobicents.cluster.version}</version>
-				</dependency>				
-				<dependency>
-					<groupId>org.mobicents.cluster</groupId>
-					<artifactId>core</artifactId>										
-					<version>${mobicents.cluster.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.mobicents.cluster</groupId>
-					<artifactId>cache</artifactId>										
-					<version>${mobicents.cluster.version}</version>
-				</dependency>
-				<dependency>
-					<groupId>org.mobicents.tools</groupId>
-					<artifactId>sip-balancer-jar</artifactId>
-					<version>${mobicents.balancer.version}</version>
-					<scope>provided</scope>
-				</dependency>
-			</dependencies>				
+			<id>jboss-5-distro</id>						
 			<build>							
 				<plugins>
 					<plugin>
