--- a/sip-servlets-examples/chatserver/pom.xml
+++ b/sip-servlets-examples/chatserver/pom.xml
@@ -3,13 +3,13 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>1.5.0-SNAPSHOT</version>
+		<version>1.5.0.FINAL</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>chatroom-servlet</artifactId>
 	<packaging>war</packaging>
-	<version>1.5.0-SNAPSHOT</version>
+	<version>1.5.0.FINAL</version>
 	<name>Chatroom Sip Servlet Example</name>
 	<url>http://www.mobicents.org/chatserver.html</url>
 
