--- a/sip-servlets-jruby/pom.xml
+++ b/sip-servlets-jruby/pom.xml
@@ -3,12 +3,12 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>sip-servlets-bootstrap</artifactId>
-		<version>1.5.0-SNAPSHOT</version>
+		<version>1.5.0.FINAL</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-jruby</artifactId>
-	<version>1.5.0-SNAPSHOT</version>
+	<version>1.5.0.FINAL</version>
 	<packaging>jar</packaging>
 	<name>Sip Servlets JRuby Integration</name>
 	<url>http://www.mobicents.org/products_sip_servlets.html</url>
@@ -19,7 +19,7 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
-			<version>1.5.0-SNAPSHOT</version>
+			<version>1.5.0.FINAL</version>
 			<scope>provided</scope>
 		</dependency>															
 	</dependencies>
