--- a/sip-servlets-examples/jslee-sips-interop/sips/ear/pom.xml
+++ b/sip-servlets-examples/jslee-sips-interop/sips/ear/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>jslee-sips-interop-demo-sips-parent</artifactId>
-		<version>1.5.0.FINAL</version>
+		<version>1.6.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>jslee-sips-interop-demo-sips-ear</artifactId>
 	<packaging>ear</packaging>
@@ -60,13 +60,13 @@
 			<artifactId>
 				jslee-sips-interop-demo-sips-business
 			</artifactId>
-			<version>1.5.0.FINAL</version>
+			<version>1.6.0-SNAPSHOT</version>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.example</groupId>
 			<artifactId>jslee-sips-interop-demo-sips-web</artifactId>
-			<version>1.5.0.FINAL</version>
+			<version>1.6.0-SNAPSHOT</version>
 			<type>war</type>
 		</dependency>
 		<dependency>
