--- a/sip-servlets-examples/speed-dial/pom.xml
+++ b/sip-servlets-examples/speed-dial/pom.xml
@@ -3,13 +3,13 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>1.5.0.FINAL</version>
+		<version>1.6.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>speed-dial</artifactId>
 	<packaging>war</packaging>
-	<version>1.5.0.FINAL</version>
+	<version>1.6.0-SNAPSHOT</version>
 	<name>Speed Dial Sip Servlet Example</name>
 	<url>http://www.mobicents.org/speed_dial.html</url>
 	
