moving to latest jain sip ext snapshot
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@16683 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
 		<mobicents.cluster.version>1.7</mobicents.cluster.version>
 		<mobicents.balancer.version>1.2-SNAPSHOT</mobicents.balancer.version>
 		<mobicents.jain.sip.ha.version>1.1.0-SNAPSHOT</mobicents.jain.sip.ha.version>
-		<mobicents.jain.sip.ext.version>1.0.BETA1</mobicents.jain.sip.ext.version>
+		<mobicents.jain.sip.ext.version>1.0-SNAPSHOT</mobicents.jain.sip.ext.version>
 		<tomcat.version>6.0.29</tomcat.version>	
 	</properties>
 	
