--- a/sip-servlets-test-suite/testsuite/pom.xml
+++ b/sip-servlets-test-suite/testsuite/pom.xml
@@ -10,12 +10,20 @@
 	<packaging>jar</packaging>
 	<name>Mobicents Sip Servlets Test Suite</name>
 	<dependencies>
+		<!-- testing dependency -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.8.5</version>
+			<scope>test</scope>
+		</dependency>	
+		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-spec</artifactId>
@@ -155,6 +163,18 @@
 			<groupId>org.mobicents.ha.javax.sip</groupId>
 			<artifactId>mobicents-jain-sip-ha-core</artifactId>
 			<version>${mobicents.jain.sip.ha.version}</version>				
+		</dependency>
+		
+		<dependency>			
+			<groupId>org.mobicents.javax.sip</groupId>
+			<artifactId>mobicents-jain-sip-ext</artifactId>
+			<version>${mobicents.jain.sip.ext.version}</version>				
+		</dependency>
+		
+		<dependency>
+			<groupId>dnsjava</groupId>
+			<artifactId>dnsjava</artifactId>
+			<version>2.1.0</version>
 		</dependency>
 		
 		<dependency>			
