fixing some classpath
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@16765 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-impl/pom.xml
+++ b/sip-servlets-impl/pom.xml
@@ -73,9 +73,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.dnsjava</groupId>
+			<groupId>dnsjava</groupId>
 			<artifactId>dnsjava</artifactId>
-			<version>2.0.6</version>
+			<version>2.1.0</version>
 			<scope>provided</scope>
 		</dependency>
 		
