--- a/sip-servlets-test-suite/applications/pom.xml
+++ b/sip-servlets-test-suite/applications/pom.xml
@@ -98,6 +98,13 @@
 		
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
+			<artifactId>sip-servlets-impl</artifactId>
+			<version>1.6.0-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-annotations</artifactId>
 			<version>1.6.0-SNAPSHOT</version>
 			<scope>provided</scope>
