fixing failing hudson
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@17250 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/alerting-app/sip-servlets/pom.xml
+++ b/sip-servlets-examples/alerting-app/sip-servlets/pom.xml
@@ -37,7 +37,13 @@
 			<version>1.0</version>	
 			<scope>provided</scope>		
 		</dependency-->
-		<!-- various -->			
+		<!-- various -->
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>jsr250-api</artifactId>
+			<version>1.0</version>
+			<scope>provided</scope>
+		</dependency>			
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
 			<artifactId>geronimo-ejb_3.0_spec</artifactId>
