--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 	
 	<properties>
 		<!-- MOBICENTS TOOL VERSIONS -->
-		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.BETA2</mobicents.tools.mavenplugin.eclipse.version>
+		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.FINAL</mobicents.tools.mavenplugin.eclipse.version>
 		<mobicents.cluster.version>1.7</mobicents.cluster.version>
 		<mobicents.balancer.version>1.2-SNAPSHOT</mobicents.balancer.version>
 		<mobicents.jain.sip.ha.version>1.1.0-SNAPSHOT</mobicents.jain.sip.ha.version>
