--- a/jopr-plugin-as-5/.project
+++ b/jopr-plugin-as-5/.project
@@ -1,6 +1,6 @@
 <projectDescription>
   <name>jopr-mobicents-sip-servlets-as-5-plugin</name>
-  <comment>A plugin for managing Mobicents Sip Servlets on JBoss 5 servers</comment>
+  <comment>A plugin for managing Mobicents Sip Servlets on JBoss 5 servers. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
   <projects/>
   <buildSpec>
     <buildCommand>
