--- a/sip-servlets-examples/presence-client-example/.project
+++ b/sip-servlets-examples/presence-client-example/.project
@@ -1,9 +1,7 @@
 <projectDescription>
   <name>call-blocking-presence</name>
-  <comment>NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
-  <projects>
-    <project>sip-servlets-spec</project>
-  </projects>
+  <comment>Mobicents :: Parent pom for 1.x releases. NO_M2ECLIPSE_SUPPORT: Project files created with the maven-eclipse-plugin are not supported in M2Eclipse.</comment>
+  <projects/>
   <buildSpec>
     <buildCommand>
       <name>org.eclipse.jdt.core.javabuilder</name>
