--- a/sip-servlets-test-suite/testsuite/pom.xml
+++ b/sip-servlets-test-suite/testsuite/pom.xml
@@ -211,7 +211,13 @@
 			<artifactId>jta</artifactId>
 			<version>1.0.1B</version>
 			<scope>test</scope>
-		</dependency>		
+		</dependency>	
+		
+		<dependency>
+		    <groupId>nl.jqno.equalsverifier</groupId>
+		    <artifactId>equalsverifier</artifactId>
+		    <version>1.0.1</version>		    
+		  </dependency>	
 	</dependencies>
 	<build>
 		<plugins>
@@ -234,4 +240,10 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+		    <id>equalsverifier-repository</id>
+		    <url>http://equalsverifier.googlecode.com/svn/maven/</url>
+		  </repository>
+  </repositories>
 </project>
