--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -260,10 +260,8 @@
 	<target name="deploy-mss-jopr-plugin-5">
 		<echo message="MSS_HOME=${mss.home}"/>
 		<move verbose="true" failonerror="false" file="${mss.home}/server/${jboss.config}/deploy/admin-console.war/plugins/jopr-jboss-as-5-plugin-2.3.0.EmbJopr.1.2.0-1.jar" tofile="${mss.home}/server/${jboss.config}/deploy/admin-console.war/plugins/jopr-jboss-as-5-plugin-2.3.0.EmbJopr.1.2.0-1.jar.bak" />
-		<get dest="${mss.home}/server/${jboss.config}/deploy/admin-console.war/plugins/" src="${mss.jopr-plugin-5.url}"/>		
-		<get dest="${mss.home}/server/${jboss.config}/deploy/admin-console.war/plugins/" src="${jopr-jmx-plugin-5.url}"/>
-		<!--get dest="${mss.home}/server/${jboss.config}/deploy/admin-console.war/plugins/jopr-mobicents-sip-servlets-as-5-plugin-${mss.jopr-plugin-5.version}.jar" src="${mss.jopr-plugin-5.url}"/>		
-		<get dest="${mss.home}/server/${jboss.config}/deploy/admin-console.war/plugins/rhq-jmx-plugin-1.2.0.GA.jar" src="${jopr-jmx-plugin-5.url}"/-->
+		<get dest="${mss.home}/server/${jboss.config}/deploy/admin-console.war/plugins/jopr-mobicents-sip-servlets-as-5-plugin-${mss.jopr-plugin-5.version}.jar" src="${mss.jopr-plugin-5.url}"/>		
+		<get dest="${mss.home}/server/${jboss.config}/deploy/admin-console.war/plugins/rhq-jmx-plugin-1.2.0.GA.jar" src="${jopr-jmx-plugin-5.url}"/>
 	</target>
 	
 	<!-- Get dependencies -->
@@ -506,10 +504,10 @@
 			<fileset dir="${jboss-5-jdk6.home.temp}/jboss-${jboss-5.version}"/>
 		</move>
 		
-		<echo>Included profiles: ${mss.release.configurations.jboss5} -&gt; Excludes list: ${mss.release.configurations.jboss5.excluded}</echo>
+		<echo>Included profiles: ${mss.release.configurations.jboss5} -&gt; Excludes list: ${used.configurations.jboss5}</echo>
 		
 		<delete includeemptydirs="true" failonerror="false" verbose="false">
-			<fileset dir="${jboss-5-jdk6.home}/server" excludes="${mss.release.configurations.jboss5.excluded}" />
+			<fileset dir="${jboss-5-jdk6.home}/server" excludes="${mss.release.configurations.jboss5}" />
 		</delete>
 	</target>
 	
