removing the need for ant-optional to have better build protability between hudson instances
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@18101 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -506,9 +506,9 @@
 		
 		<echo>Included profiles: ${mss.release.configurations.jboss5} -&gt; Excludes list: ${used.configurations.jboss5}</echo>
 		
-		<delete includeemptydirs="true" failonerror="false" verbose="false">
-			<fileset dir="${jboss-5-jdk6.home}/server" excludes="${mss.release.configurations.jboss5}" />
-		</delete>
+		<delete dir="${jboss-5-jdk6.home}/server/minimal" includeemptydirs="true" failonerror="false" verbose="false"/>			
+		<delete dir="${jboss-5-jdk6.home}/server/web" includeemptydirs="true" failonerror="false" verbose="false"/>
+		<delete dir="${jboss-5-jdk6.home}/server/standard" includeemptydirs="true" failonerror="false" verbose="false"/>
 	</target>
 	
 	<target name="extract-mms" depends="get-mms">
