--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -27,10 +27,10 @@
 	<property name="embjopr.download.url" value="http://downloads.sourceforge.net/project/rhq/embedded-jopr/embedded-jopr-1.2.0.CR/embedded-jopr-${embjopr.version}.zip" />
 	
 	<property name="diameter.version" value="1.2.1.GA" />
-	<property name="diameter.download.url" value="https://repository.jboss.org/nexus/content/groups/public/org/mobicents/servers/diameter/mobicents-diameter-mux-sar-jboss-4/${diameter.version}/mobicents-diameter-mux-sar-jboss-4-${diameter.version}.sar" />
+	<property name="diameter.download.url" value="http://repository.jboss.org/nexus/content/groups/public/org/mobicents/servers/diameter/mobicents-diameter-mux-sar-jboss-4/${diameter.version}/mobicents-diameter-mux-sar-jboss-4-${diameter.version}.sar" />
 	<property name="diameter-jboss-5.version" value="1.3.3.FINAL" />
 	<property name="diameter-jboss-5.name" value="mobicents-diameter-mux-sar-jboss-5-${diameter-jboss-5.version}.sar"/>
-	<property name="diameter-jboss-5.download.url" value="https://repository.jboss.org/nexus/content/groups/public/org/mobicents/servers/diameter/mobicents-diameter-mux-sar-jboss-5/${diameter-jboss-5.version}/${diameter-jboss-5.name}" />
+	<property name="diameter-jboss-5.download.url" value="http://repository.jboss.org/nexus/content/groups/public/org/mobicents/servers/diameter/mobicents-diameter-mux-sar-jboss-5/${diameter-jboss-5.version}/${diameter-jboss-5.name}" />
 	<property name="diameter.distro.path" value="${base.path}/mobicents-diameter-jboss-4-${diameter.version}.sar" />
 	<property name="diameter-jboss-5.distro.path" value="${base.path}/mobicents-diameter-jboss-5-${diameter-jboss-5.version}.sar" />
 	
