--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -103,8 +103,6 @@
 	</target>
 	
 	<!-- JBoss 5 jdk6 version -->
-		
-	<!--target name="release-jboss-5-jdk6" depends="extract-jboss-5-jdk6,extract-jboss-5-torquebox-deployer-for-jdk6"-->
 	<target name="release-jboss-5-jdk6" depends="extract-jboss-5-jdk6">
 		<for delimiter="," param="jboss.config" list="${mss.release.configurations.jboss5}">
 			<sequential>
@@ -170,24 +168,12 @@
 		
 		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/../..">
 			<arg line="clean buildnumber:create install -U -P set-svn-revision,jboss-5-distro,docs -DJBOSS_HOME=${mss.home} -Dnode=${jboss.config}" />
-		</exec>
+		</exec>		
 		
-		<!--delete file="${mss.home}/server/${jboss.config}/deployers/torquebox.deployer/lib/dependencies/sip-servlets-annotations.jar" />
-		<delete file="${mss.home}/server/${jboss.config}/deployers/torquebox.deployer/lib/dependencies/sip-servlets-impl.jar" />
-		<delete file="${mss.home}/server/${jboss.config}/deployers/torquebox.deployer/lib/dependencies/sip-servlets-spec.jar" />
-		<delete file="${mss.home}/server/${jboss.config}/deployers/torquebox.deployer/lib/dependencies/sip-servlets-jboss5-metadata.jar" />
-		<copy tofile="${mss.home}/server/${jboss.config}/deployers/torquebox.deployer/lib/dependencies/sip-servlets-annotations.jar">
-			<fileset dir="${mss.home}/server/${jboss.config}/deploy/jbossweb.sar/" includes="sip-servlets-annotations-*.jar" />
-		</copy>
-		<copy tofile="${mss.home}/server/${jboss.config}/deployers/torquebox.deployer/lib/dependencies/sip-servlets-impl.jar">
-			<fileset dir="${mss.home}/server/${jboss.config}/deploy/jbossweb.sar/" includes="sip-servlets-impl-*.jar" />
-		</copy>
-		<copy tofile="${mss.home}/server/${jboss.config}/deployers/torquebox.deployer/lib/dependencies/sip-servlets-spec.jar">
-			<fileset dir="${mss.home}/server/${jboss.config}/deploy/jbossweb.sar/" includes="sip-servlets-spec-*.jar" />
-		</copy>
-		<copy tofile="${mss.home}/server/${jboss.config}/deployers/torquebox.deployer/lib/dependencies/sip-servlets-jboss5-metadata.jar">
-			<fileset dir="${mss.home}/server/${jboss.config}/deploy/jbossweb.sar/" includes="sip-servlets-jboss5-metadata-*.jar" />
-		</copy-->				
+		<antcall target="build-mobicents-sglc">
+			<param name="mss.home" value="${mss.home}"/>
+			<param name="node" value="${jboss.config}"/>
+		</antcall>
 				
 		<antcall target="deploy-mgmnt" >
 			<param name="management.deploy.folder" value="${mss.home}/server/${jboss.config}/deploy" />
@@ -221,21 +207,6 @@
 		<copy overwrite="true" file="${base.path}/metadata-deployer-jboss-beans.xml" tofile="${mss.home}/server/${jboss.config}/deployers/metadata-deployer-jboss-beans.xml" />
 		<copy overwrite="true" file="${base.path}/jboss-cache-manager-jboss-beans.xml" tofile="${mss.home}/server/${jboss.config}/deploy/cluster/jboss-cache-manager.sar/META-INF/jboss-cache-manager-jboss-beans.xml" />
 		<copy overwrite="true" file="${base.path}/failover-war-deployers-jboss-beans.xml" tofile="${mss.home}/server/${jboss.config}/deployers/jbossweb.deployer/META-INF/war-deployers-jboss-beans.xml" />
-				
-		<!-- Not needed anymore since jboss maven profile copies the ha stack as well now for JMX management -->
-		<!--exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/../..">
-			<arg line="clean install -U -P set-svn-revision,jboss-5-distro,jboss-5-cluster-distro -DJBOSS_HOME=${mss.home} -Dnode=${jboss.config}" />
-		</exec-->
-		
-		<!--exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/../../sip-servlets-examples/simple-sip-servlet-distributable">
-			<arg line="clean install -U -P set-svn-revision"/>
-		</exec>
-			
-		<copy tofile="${mss.home}/server/${jboss.config}/deploy/simple-distributable.war">
-			<fileset dir="${base.path}/../../sip-servlets-examples/simple-sip-servlet-distributable/target/" includes="simple-sip-servlet-distributable-*.war" />
-		</copy>						
-		
-		<copy overwrite="true" file="${base.path}/../../sip-servlets-examples/simple-sip-servlet-distributable/distributable-simple-dar.properties" tofile="${mss.home}/server/${jboss.config}/conf/dars/mobicents-dar.properties" /-->
 		
 		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/../../sip-servlets-examples/click2call-distributable">
 			<arg line="clean install -U -P set-svn-revision" />
@@ -309,6 +280,20 @@
 		</copy>		
 		<copy file="${base.path}/target/dependencies/sip-balancer/jar/src/test/resources/lb-configuration.properties"
 			tofile="${mss.home}/sip-balancer/lb-configuration.properties" />
+	</target>
+	
+	<target name="build-mobicents-sglc" depends="get-deps">
+		<echo>Building Mobicents Simple Global Logging Configuration</echo>
+		<echo message="jboss.home= ${mss.home}"/>
+		<echo message="node= ${node}"/>
+		<copy overwrite="true" force="true" verbose="true" todir="${base.path}/target/dependencies/sglc/sar/target/mobicents-sglc/log4j-templates">
+		    <fileset dir="${base.path}/sglc-templates">
+		      <include name="**/*.xml.*"/>
+		    </fileset>
+		  </copy>
+		<exec failonerror="true" executable="${mvn.executable}" dir="${base.path}/target/dependencies/sglc">
+			<arg line="clean install -P set-svn-revision -Dmaven.test.skip=true -Djboss.home=${mss.home} -Dnode=${node}" />
+		</exec>			
 	</target>
 	
 	<!-- Download dependencies from SourceForge -->
