fixing broken release build
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@18318 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -286,7 +286,7 @@
 		<echo>Building Mobicents Simple Global Logging Configuration</echo>
 		<echo message="jboss.home= ${mss.home}"/>
 		<echo message="node= ${node}"/>
-		<copy overwrite="true" force="true" verbose="true" todir="${base.path}/target/dependencies/sglc/sar/target/mobicents-sglc/log4j-templates">
+		<copy overwrite="true" verbose="true" todir="${base.path}/target/dependencies/sglc/sar/target/mobicents-sglc/log4j-templates">
 		    <fileset dir="${base.path}/sglc-templates">
 		      <include name="**/*.xml.*"/>
 		    </fileset>
